# vulkan-test

./: .gitignore  Cargo.toml  README.md  build.rs
assets/: config.toml
shaders/: compile.sh  triangle.vert
src/: app.rs  main.rs
src/assets/: mesh.rs  mod.rs  shaders.rs
src/core/: debug.rs  device.rs  entry.rs  instance.rs  mod.rs  queues.rs  surface.rs  swapchain.rs  sync.rs
src/engine/: camera.rs  camera_rig.rs  camera_system.rs  engine.rs  game_loop.rs  mod.rs  time.rs
src/game/: character_controller.rs  game.rs  mod.rs
src/gfx/: context.rs  swapchain.rs
src/input/: input_state.rs  keybind.rs  mod.rs
src/platform/: mod.rs  window_glfw.rs
src/renderer/: command_buffers.rs  error.rs  framebuffers.rs  mesh.rs  mod.rs  pipeline.rs  render_pass.rs  render_types.rs  renderer.rs
src/resources/: buffer.rs  descriptor.rs  mod.rs
src/scene/: mesh_store.rs  mod.rs  scene.rs  transform.rs
src/utils/: config.rs  file_io.rs  logger.rs  mod.rs  vk_check.rs
