[package]
name = "vulkan-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
glam = "0.30.9"
glfw = "0.61.0"
log = "0.4.29"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"]}
thiserror = "2.0.17"
toml = "0.9.10"

[build-dependencies]
shaderc = "0.8"
